# wasm-sample

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
include/: main.cpp
include/cutemodel/: cute_model.h
opencv/include/opencv2/: cvconfig.h
sample1/: CMakeLists.txt
sample1/include/: blaze_face_wrapper.h  main.cpp
sample1/include/cutemodel/: impl.h
sample1/tflite/: CMakeLists.txt
sample1/tflite/include/tensorflow/lite/tools/cmake/modules/: xnnpack.cmake
sample2/: CMakeLists.txt
sample2/app/: WasmSample.js  WasmSample.wasm  camera.js  index.html  index.js  main.js  package-lock.json
sample2/app/polyfil/: imagecapture.js
sample2/app/wasm/: wasm.js
sample2/app/wasm/nonsimd/: WasmSample.js  WasmSample.wasm  WasmSample.worker.js
sample2/app/wasm/simd/: WasmSample.js  WasmSample.wasm
sample2/include/: blaze_face_wrapper.cpp  main.cpp
sample2/include/cutemodel/: cute_model.cpp
sample2/include/model/: blaze_face_model.h  model_reader.cpp  model_reader.h
sample2/opencv/: CMakeLists.txt
sample2/opencv/include/opencv2/: opencv_modules.hpp
